--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "reactstrap": "^8.2.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "react-hook-form": "^3.29.4"
   },
   "scripts": {
     "start": "react-scripts start",
